<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/schedule_exercise"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:textSize="25sp"
        android:padding="8dp"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/scheduleImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/schedule_icon"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_schedule" />

    <TextView
        android:id="@+id/time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:textSize="25sp"
        android:padding="8dp"
        android:text="@string/time"
        app:layout_constraintBottom_toTopOf="@+id/schSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <ImageView
        android:id="@+id/timeImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/time_icon"
        app:layout_constraintBottom_toTopOf="@+id/schSwitch"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:srcCompat="@drawable/ic_time" />

    <ImageView
        android:id="@+id/walk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/walk_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/schSwitch"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:srcCompat="@drawable/ic_walk" />

    <ImageView
        android:id="@+id/run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/run_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/schSwitch"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:srcCompat="@drawable/ic_run" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/schSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="15dp"
        android:theme="@style/BWSwitch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />


    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btnStyle"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reminder" />

    <CheckBox
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/send_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />
</androidx.constraintlayout.widget.ConstraintLayout>